crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__liliana_the_repentant_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 77,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever another creature or planeswalker you control enters, mill two cards."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "ChangesZone",
            "partial_def": {
              "mode": "ChangesZone",
              "execute": null,
              "valid_card": {
                "type": "Or",
                "filters": [
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Creature"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      }
                    ]
                  },
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Planeswalker"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      }
                    ]
                  }
                ]
              },
              "origin": null,
              "destination": "Battlefield",
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 14,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "mill two cards"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Mill",
                        "count": {
                          "type": "Fixed",
                          "value": 2
                        },
                        "target": {
                          "type": "Controller"
                        },
                        "destination": "Graveyard"
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "optional_player": null,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "Or",
                "filters": [
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Creature"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      }
                    ]
                  },
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Planeswalker"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      }
                    ]
                  }
                ]
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "mill two cards.",
              "relative_player_scope": null
            },
            "source_text": "Whenever another creature or planeswalker you control enters, mill two cards.",
            "die_results": []
          }
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 78,
          "end_byte": 284,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Exhaust — {5}{B}: Return target creature or planeswalker card from your graveyard to the battlefield. Put a +1/+1 counter on Liliana. Activate only as a sorcery. (Activate each exhaust ability only once.)"
      },
      "node": {
        "Spell": {
          "source_text": "Return target creature or planeswalker card from your graveyard to the battlefield. Put a +1/+1 counter on Liliana",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 82,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Return target creature or planeswalker card from your graveyard to the battlefield"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "ChangeZone",
                    "origin": "Graveyard",
                    "destination": "Battlefield",
                    "target": {
                      "type": "Or",
                      "filters": [
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Creature"
                          ],
                          "controller": "You",
                          "properties": [
                            {
                              "type": "InZone",
                              "zone": "Graveyard"
                            }
                          ]
                        },
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Planeswalker"
                          ],
                          "controller": "You",
                          "properties": [
                            {
                              "type": "InZone",
                              "zone": "Graveyard"
                            }
                          ]
                        }
                      ]
                    },
                    "owner_library": false,
                    "enter_transformed": false,
                    "enter_tapped": false,
                    "enters_attacking": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 1,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 2
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 84,
                    "end_byte": 114,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 1
                  },
                  "fragment": "Put a +1/+1 counter on Liliana"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "PutCounter",
                    "counter_type": "P1P1",
                    "count": {
                      "type": "Fixed",
                      "value": 1
                    },
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        {
                          "Subtype": "Liliana"
                        }
                      ],
                      "controller": null,
                      "properties": []
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [
                  "Black"
                ],
                "generic": 5
              }
            },
            "activation_restrictions": [
              {
                "type": "AsSorcery"
              },
              {
                "type": "OnlyOnce"
              }
            ],
            "ability_tag": {
              "type": "Exhaust"
            },
            "description": "Exhaust — {5}{B}: Return target creature or planeswalker card from your graveyard to the battlefield. Put a +1/+1 counter on Liliana. Activate only as a sorcery.",
            "stages": [
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Whenever another creature or planeswalker you control enters, mill two cards.\nExhaust — {5}{B}: Return target creature or planeswalker card from your graveyard to the battlefield. Put a +1/+1 counter on Liliana. Activate only as a sorcery. (Activate each exhaust ability only once.)",
  "card_name": "Liliana the Repentant"
}
