crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__liliana_the_repentant_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "ChangeZone",
        "origin": "Graveyard",
        "destination": "Battlefield",
        "target": {
          "type": "Or",
          "filters": [
            {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": [
                {
                  "type": "InZone",
                  "zone": "Graveyard"
                }
              ]
            },
            {
              "type": "Typed",
              "type_filters": [
                "Planeswalker"
              ],
              "controller": "You",
              "properties": [
                {
                  "type": "InZone",
                  "zone": "Graveyard"
                }
              ]
            }
          ]
        },
        "owner_library": false,
        "enter_transformed": false,
        "enter_tapped": false,
        "enters_attacking": false
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "Black"
          ],
          "generic": 5
        }
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "PutCounter",
          "counter_type": "P1P1",
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "target": {
            "type": "Typed",
            "type_filters": [
              {
                "Subtype": "Liliana"
              }
            ],
            "controller": null,
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "target_choice_timing": "Resolution",
        "forward_result": false,
        "sub_link": "SequentialSibling"
      },
      "duration": null,
      "description": "Exhaust — {5}{B}: Return target creature or planeswalker card from your graveyard to the battlefield. Put a +1/+1 counter on Liliana. Activate only as a sorcery.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnce"
        }
      ],
      "ability_tag": {
        "type": "Exhaust"
      },
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Mill",
          "count": {
            "type": "Fixed",
            "value": 2
          },
          "target": {
            "type": "Controller"
          },
          "destination": "Graveyard"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "Or",
        "filters": [
          {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": [
              {
                "type": "Another"
              }
            ]
          },
          {
            "type": "Typed",
            "type_filters": [
              "Planeswalker"
            ],
            "controller": "You",
            "properties": [
              {
                "type": "Another"
              }
            ]
          }
        ]
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "Whenever another creature or planeswalker you control enters, mill two cards.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
