crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__llanowar_elves_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Mana",
        "produced": {
          "type": "Fixed",
          "colors": [
            "Green"
          ]
        }
      },
      "cost": {
        "type": "Tap"
      },
      "sub_ability": null,
      "duration": null,
      "description": "{T}: Add {G}.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false,
      "is_mana_ability": true
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
