crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__lovestruck_beast_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "CantAttack",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": {
        "type": "Not",
        "condition": {
          "type": "IsPresent",
          "filter": {
            "type": "Typed",
            "type_filters": [],
            "controller": "You",
            "properties": [
              {
                "type": "InZone",
                "zone": "Battlefield"
              }
            ]
          }
        }
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "~ can't attack unless you control a 1/1 creature."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
